--- a/sprint-1__startkit/index.html
+++ b/sprint-1__startkit/index.html
@@ -13,15 +13,16 @@
       <div class="logo logo_place_hedder">
         <img src="./images/logo_place_header.svg">
       </div>
-      <div class="title">
+      <div class="header__title">
         Научиться учиться
       </div>
-      <div class="subtitle">
-        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <div class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="link">Узнать -></a>
       </div>
-      <link class="link">
-      <div class="main-illustration"></div>
-      <div CLASS="square-pic"></div>
+      <div class="header__main-illustration">
+        <img src="./images/two_again.png" class="header__main-illustration">
+      </div>
+      <div CLASS="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
