--- a/sprint-1__startkit/index.html
+++ b/sprint-1__startkit/index.html
@@ -26,6 +26,17 @@
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <title class="brief">
+            Главные проблемы в обучении
+          </title>
+          <div class="description__main-text">
+            <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="paragraph"><span>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
