--- a/sprint-1__startkit/index.html
+++ b/sprint-1__startkit/index.html
@@ -27,22 +27,72 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <title class="brief">
+          <h1 class="brief">
             Главные проблемы в обучении
-          </title>
+          </h1>
           <div class="description__main-text">
             <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="paragraph"><span>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            <p class="paragraph"><span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="paragraph paragraph-last">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
         </div>
       </section>
 
       <section class="digits">
+        <h1 class="digits__section-title">Цифры и факты</h1>
+        <h2 class="digits__section-subtitle">Про учёбу и мозг</h2>
+        <div class="digits__table">
+          <div class="digits__table__row">
+            <div class="digits__table__cell">
+              <div class="digits__table__cell__heading">86 миллиардов</div>
+              <div class="digits__table__cell__text">Число нейронов в мозге человека</div>
+            </div>
+            <div class="digits__table__cell">
+              <div class="digits__table__cell__heading">2.1 миллиарда</div>
+              <div class="digits__table__cell__text">
+                <p class="digits__table__cell__text__paragraph">Число нуждающихся в повышении квалификации</p>
+                <p class="digits__table__cell__text__paragraph-last">Всемирный Банк, 2017</p>
+              </div>
+            </div>
+            <div class="digits__table__cell">
+              <div class="digits__table__cell__heading">1000 терабайт</div>
+              <div class="digits__table__cell__text">Объём памяти человека</div>
+            </div>
+            <div class="digits__table__cell">
+              <div class="digits__table__cell__heading">500 триллионов</div>
+              <div class="digits__table__cell__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+            </div>
+          </div>
+          <div class="digits__table__row">
+            <div class="digits__table__cell">
+              <div class="digits__table__cell__heading">420 миллионов</div>
+              <div class="digits__table__cell__text">
+                <p class="digits__table__cell__text__paragraph">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                <p class="digits__table__cell__text__paragraph-last">Всемирный Банк, 2017</p>
+              </div>
+            </div>
+            <div class="digits__table__cell">
+              <div class="digits__table__cell__heading">17–20 лет</div>
+              <div class="digits__table__cell__text">Пик обучаемости</div>
+            </div>
+            <div class="digits__table__cell">
+              <div class="digits__table__cell__heading">1885 год</div>
+              <div class="digits__table__cell__text">Открытие кривой забывания</div>
+            </div>
+            <div class="digits__table__cell">
+              <div class="digits__table__cell__heading">1889 год</div>
+              <div class="digits__table__cell__text">Открытие условного рефлекса</div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+        <a href="#" class="feynman__link">Подробнее -></a>
+        <img src="./images/feynman.png" class="feynman__img">
       </section>
 
       <section class="kaufman">
