--- a/sprint-1__startkit/index.html
+++ b/sprint-1__startkit/index.html
@@ -96,6 +96,55 @@
       </section>
 
       <section class="kaufman">
+        <h1 class="kaufman__title">Принципы обучения</h1>
+        <h2 class="kaufman__subtitle">от Джоша Кауфмана</h2>
+        <div class="kaufman__table">
+          <div class="kaufman__table__row">
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">1</div>
+              <p class="kaufman__table__cell__text">Выберите привлекательный проект.</p>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">2</div>
+              <p class="kaufman__table__cell__text">Сосредоточьтесь на каком-то одном навыке.</p>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">3</div>
+              <p class="kaufman__table__cell__text">Определите целевой уровень мастерства.</p>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">4</div>
+              <p class="kaufman__table__cell__text">Разбейте навык на элементы.</p>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">5</div>
+              <p class="kaufman__table__cell__text">Приготовьте всё необходимое для занятий.</p>
+            </div>
+          </div>
+          <div class="kaufman__table__row">
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">6</div>
+              <p class="kaufman__table__cell__text">Устраните препятствия для занятий.</p>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">7</div>
+              <p class="kaufman__table__cell__text">Выделите специальное время для занятий.</p>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">8</div>
+              <p class="kaufman__table__cell__text">Создайте быстрые петли обратной связи.</p>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">9</div>
+              <p class="kaufman__table__cell__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </div>
+            <div class="kaufman__table__cell">
+              <div class="kaufman__table__cell__heading">10</div>
+              <p class="kaufman__table__cell__text">Уделяйте внимание количеству и скорости.</p>
+            </div>
+          </div>
+        </div>
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle">
       </section>
     </main>
     <footer class="footer">
