--- a/sprint-1__startkit/index.html
+++ b/sprint-1__startkit/index.html
@@ -17,7 +17,7 @@
         Научиться учиться
       </div>
       <div class="header__subtitle">
-        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="link">Узнать -></a>
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать -></a>
       </div>
       <div class="header__main-illustration">
         <img src="./images/two_again.png" class="header__main-illustration">
@@ -148,7 +148,28 @@
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__columns_content_copyright">
+          <img src="./images/logo_place_footer.svg" class="logo logo_place_footer">
+          <p class="footer__author"> &copy; Кривошта Иван</p>
+        </div>
+        <div class="footer__columns_content_info footer__column">
+          <h2 class="footer__column__heading">О Практикуме</h2>
+          <div class="footer__column__links">
+            <a href="#" class="footer__column__link">Главная</a>
+            <a href="#" class="footer__column__link">Концепция</a>
+            <a href="#" class="footer__column__link">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__columns_content_social footer__column">
+          <h2 class="footer__column__heading">Соцсети</h2>
+          <div class="footer__column__links">
+            <a href="#" class="footer__column__link"><img src="./images/youtube_color_white.svg" class="footer__social-icon">Youtube</a>
+            <a href="#" class="footer__column__link"><img src="./images/vk_color_white.svg" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column__link"><img src="./images/tiktok_color_white.svg" class="footer__social-icon">TikTok</a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
